tests/specs/node/assert_deepstrictequal_number/test.mjs
import assert from 'node:assert/strict';

assert.deepStrictEqual(new Number(1), new Number(2));